[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/enemy_spawner.gd" type="Script" id=1]

[node name="enemy_spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="wave_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="enemy_spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="spawn_point_collection" type="Node" parent="."]

[node name="spawn_point_1" type="Position2D" parent="spawn_point_collection"]

[node name="spawn_point_2" type="Position2D" parent="spawn_point_collection"]

[node name="spawn_point_3" type="Position2D" parent="spawn_point_collection"]

[node name="spawn_point_4" type="Position2D" parent="spawn_point_collection"]
[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
